# create-table-project

./: .gitignore  README.md  pyproject.toml
app/: input_models.py  main.py
app/config/: settings.py
app/utils/: excel_reader.py  input_from_json.py  json_sql_parser.py  logger.py  mysql_parser.py  rpa_sheet.py  table_builder.py  type_converter.py
tests/: test_clickhouse_create_sql.py  test_empty_field_comment.py  test_excel_reader_load_excel.py  test_fields_sheet_processing.py  test_hive_alter_sql.py  test_hive_create_sql.py  test_json_input.py  test_logger.py  test_main_entry.py  test_main_flow.py  test_mysql_parser.py  test_rpa_sheet.py  test_table_builder.py  test_table_matching.py  test_type_converter.py
