[project]
name = "create-table-project"
version = "1.1.0"
description = "Hive/ClickHouse DDL from Excel or JSON (merged add-sql flow); RPA sheet output"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "tabulate>=0.10.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# 明确指定只包含 app 目录，排除 logs
packages = ["app"]

[project.scripts]
# 左边是你想在终端输入的命令，右边是代码路径
create-table = "app.main:main" 